--- a/web/admin.html
+++ b/web/admin.html
@@ -134,8 +134,8 @@
                         <!--form-->
                         <form class="text-center" style="color: #757575;" action="#!">
                             <div class="md-form">
-                                <label for="id_corso" id="inserisci3">corso:</label>
-                                <input type="text" class="form-control float-center" placeholder="Corso"  v-model="insegnamenti.id_corso" id="id_corso">
+                                <label for="titolo" id="inserisci3">corso:</label>
+                                <input type="text" class="form-control float-center" placeholder="Corso"  v-model="insegnamenti.titolo" id="titolo2">
                             </div>
                             <div class="md-form">
                                 <label for="id_docente" id="inserisci4">docente:</label>
@@ -148,9 +148,9 @@
                             <table class="table table-bordered table-responsive-md table-striped text-center">
                                 <tbody v-for="insegn in insegnamenti">
                                 <tr>
-                                    <td class="pt-3-half" onmouseover="style.color='blue'" onmouseout="style.color='black'" contenteditable="true">{{ insegn.id_corso}} {{insegn.id_docente }}</td>
+                                    <td class="pt-3-half" onmouseover="style.color='blue'" onmouseout="style.color='black'" contenteditable="true">{{ insegn.titolo}} {{insegn.id_docente }}</td>
                                     <td>
-                                     <span class="table-remove"><button type="button" v-on:click="rimuoviInsegnamenti(insegn-id_corso, insegn.id_docente)"
+                                     <span class="table-remove"><button type="button" v-on:click="rimuoviInsegnamenti(insegn.titolo, insegn.id_docente)"
                                                                         class="btn btn-danger btn-rounded btn-sm my-0">Remove</button>
                                      </span>
                                     </td>
@@ -242,12 +242,12 @@
                     var self = this;
                     $.post(this.link, {
                             action: 'NEWINSEGNAMENTI',
-                            id_corso: this.insegnamenti.id_corso,
+                            titolo: this.insegnamenti.titolo,
                             id_docente: this.insegnamenti.id_docente,
                         },
                         function (data) {
                             self.insegnamenti = data[7]
-                            if (self.insegnamenti.id_corso !== "" && self.insegnamenti.id_docente !== "") {
+                            if (self.insegnamenti.titolo !== "" && self.insegnamenti.id_docente !== "") {
                                 self.insegnamenti = data[7]
                                 window.location.reload();
                             } else {
@@ -290,16 +290,14 @@
 
 
                 },
-                rimuoviInsegnamenti: function (id_corso, id_docente) {
+                rimuoviInsegnamenti: function (titolo, id_docente) {
                     var self = this;
-                    id_corso=document.getElementById('id_corso');
-                    id_docente=document.getElementById('id_docente');
                     $.post(this.link, {action: 'DELETEINSEGNAMENTI',
-                            id_corso : this.insegnamenti.id_corso,
-                            id_docente:this.insegnamenti.id_docente},
+                            titolo: titolo,
+                            id_docente: id_docente},
                         function (data) {
+                            data = JSON.parse(data);
                             if (data == "true") {
-                                alert("rimosso")
                                 window.location.reload(); /*aggiorno la pagina*/
                             } else {
                                 self.err = "errore"
